[gd_scene load_steps=11 format=3 uid="uid://bdwn67jvg8r4j"]

[ext_resource type="Script" path="res://scripts/prototype_movement/DozerTest.gd" id="1_1tlp0"]
[ext_resource type="PackedScene" uid="uid://ce6dbtmv37r1" path="res://models/m27_body.blend" id="2_jb00g"]
[ext_resource type="Script" path="res://scripts/prototype_movement/left_tread.gd" id="3_hg00s"]
[ext_resource type="PackedScene" uid="uid://df0l1180hmt0x" path="res://models/m27_tread.blend" id="4_0ceyg"]
[ext_resource type="Script" path="res://scripts/prototype_movement/right_tread.gd" id="5_ie8j0"]
[ext_resource type="PackedScene" uid="uid://de0ripd3866nb" path="res://models/arm.glb" id="6_m2vd7"]
[ext_resource type="Script" path="res://scripts/prototype_movement/arm.gd" id="7_ws4yn"]
[ext_resource type="Script" path="res://scripts/camera_3d.gd" id="8_sgg0n"]

[sub_resource type="Curve3D" id="Curve3D_1qq5d"]
_data = {
"points": PackedVector3Array(0, 0, 0, 0, 0, 0, 0, 0.00248486, -0.00129479, 0, 0, 0, 0, 0, 0, 3.80278e-05, -0.0205253, 0.506476, 0, -0.193092, 0, 0, 0.193092, 0, 3.80278e-05, 0.168665, 0.674212, 0, 0, 0, 0, 0, 0, -0.00394297, 0.337568, 0.510287, 0, 0, 0, 0, 0, 0, -0.0052717, 0.328808, -0.460008, 0, 0.134579, -0.00975204, 0, -0.134579, 0.00975204, -0.000610948, 0.162496, -0.639652, 0, 0, 0, 0, 0, 0, 3.81172e-05, -0.0107731, -0.474585, 0, 0, 0, 0, 0, 0, 0, 0.00248486, -0.00129479),
"tilts": PackedFloat32Array(0, 0, 0, 0, 0, 0, 0, 0)
}
point_count = 8

[sub_resource type="BoxShape3D" id="BoxShape3D_tygfx"]
size = Vector3(0.702148, 0.579834, 2.44124)

[node name="Node3D" type="Node3D"]

[node name="M27" type="VehicleBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.525266, 0)
script = ExtResource("1_1tlp0")

[node name="LeftWheelForward" type="VehicleWheel3D" parent="M27"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0.38221, -0.0918806, 0.417485)
wheel_radius = 0.178
wheel_rest_length = 0.049
wheel_friction_slip = 1.0
suspension_travel = 0.065
suspension_stiffness = 50.0
damping_compression = 1.0
damping_relaxation = 1.0

[node name="RightWheelForward" type="VehicleWheel3D" parent="M27"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -0.382, -0.102863, 0.417825)
wheel_radius = 0.178
wheel_rest_length = 0.049
wheel_friction_slip = 1.0
suspension_travel = 0.065
suspension_stiffness = 50.0
damping_compression = 1.0
damping_relaxation = 1.0

[node name="LeftWheelBack" type="VehicleWheel3D" parent="M27"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0.38221, -0.0918806, -0.484328)
wheel_radius = 0.178
wheel_rest_length = 0.049
wheel_friction_slip = 1.0
suspension_travel = 0.065
suspension_stiffness = 50.0
damping_compression = 1.0
damping_relaxation = 1.0

[node name="RightWheelBack" type="VehicleWheel3D" parent="M27"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -0.382, -0.102863, -0.483968)
wheel_radius = 0.178
wheel_rest_length = 0.049
wheel_friction_slip = 1.0
suspension_travel = 0.065
suspension_stiffness = 50.0
damping_compression = 1.0
damping_relaxation = 1.0

[node name="LeftWheel" type="VehicleWheel3D" parent="M27"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0.38221, -0.0918806, -0.0152591)
brake = 1.5
use_as_traction = true
wheel_radius = 0.178
wheel_rest_length = 0.049
wheel_friction_slip = 1.0
suspension_travel = 0.065
suspension_stiffness = 50.0
damping_compression = 1.0
damping_relaxation = 1.0

[node name="RightWheel" type="VehicleWheel3D" parent="M27"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -0.382, -0.102816, -0.015)
brake = 1.5
use_as_traction = true
wheel_radius = 0.178
wheel_rest_length = 0.049
wheel_friction_slip = 1.0
suspension_travel = 0.065
suspension_stiffness = 50.0
damping_compression = 1.0
damping_relaxation = 1.0

[node name="m27_body" parent="M27" instance=ExtResource("2_jb00g")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0836291, 0)
skeleton = NodePath("../..")

[node name="LeftTread" type="Path3D" parent="M27"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -0.289391, -0.229939, -0.0210779)
curve = SubResource("Curve3D_1qq5d")
script = ExtResource("3_hg00s")

[node name="Tread" type="PathFollow3D" parent="M27/LeftTread"]
transform = Transform3D(-1, 3.39032e-06, -7.48149e-05, 0, 0.998975, 0.0452696, 7.48917e-05, 0.0452696, -0.998975, 0, 0.00248486, -0.00129479)
rotation_mode = 4

[node name="m27_tread" parent="M27/LeftTread/Tread" instance=ExtResource("4_0ceyg")]

[node name="Tread2" type="PathFollow3D" parent="M27/LeftTread"]
transform = Transform3D(-1, 3.39032e-06, -7.48149e-05, 0, 0.998975, 0.0452696, 7.48917e-05, 0.0452696, -0.998975, 0, 0.00248486, -0.00129479)
rotation_mode = 4

[node name="m27_tread" parent="M27/LeftTread/Tread2" instance=ExtResource("4_0ceyg")]

[node name="Tread3" type="PathFollow3D" parent="M27/LeftTread"]
transform = Transform3D(-1, 3.39032e-06, -7.48149e-05, 0, 0.998975, 0.0452696, 7.48917e-05, 0.0452696, -0.998975, 0, 0.00248486, -0.00129479)
rotation_mode = 4

[node name="m27_tread" parent="M27/LeftTread/Tread3" instance=ExtResource("4_0ceyg")]

[node name="Tread4" type="PathFollow3D" parent="M27/LeftTread"]
transform = Transform3D(-1, 3.39032e-06, -7.48149e-05, 0, 0.998975, 0.0452696, 7.48917e-05, 0.0452696, -0.998975, 0, 0.00248486, -0.00129479)
rotation_mode = 4

[node name="m27_tread" parent="M27/LeftTread/Tread4" instance=ExtResource("4_0ceyg")]

[node name="Tread5" type="PathFollow3D" parent="M27/LeftTread"]
transform = Transform3D(-1, 3.39032e-06, -7.48149e-05, 0, 0.998975, 0.0452696, 7.48917e-05, 0.0452696, -0.998975, 0, 0.00248486, -0.00129479)
rotation_mode = 4

[node name="m27_tread" parent="M27/LeftTread/Tread5" instance=ExtResource("4_0ceyg")]

[node name="Tread6" type="PathFollow3D" parent="M27/LeftTread"]
transform = Transform3D(-1, 3.39032e-06, -7.48149e-05, 0, 0.998975, 0.0452696, 7.48917e-05, 0.0452696, -0.998975, 0, 0.00248486, -0.00129479)
rotation_mode = 4

[node name="m27_tread" parent="M27/LeftTread/Tread6" instance=ExtResource("4_0ceyg")]

[node name="Tread7" type="PathFollow3D" parent="M27/LeftTread"]
transform = Transform3D(-1, 3.39032e-06, -7.48149e-05, 0, 0.998975, 0.0452696, 7.48917e-05, 0.0452696, -0.998975, 0, 0.00248486, -0.00129479)
rotation_mode = 4

[node name="m27_tread" parent="M27/LeftTread/Tread7" instance=ExtResource("4_0ceyg")]

[node name="Tread8" type="PathFollow3D" parent="M27/LeftTread"]
transform = Transform3D(-1, 3.39032e-06, -7.48149e-05, 0, 0.998975, 0.0452696, 7.48917e-05, 0.0452696, -0.998975, 0, 0.00248486, -0.00129479)
rotation_mode = 4

[node name="m27_tread" parent="M27/LeftTread/Tread8" instance=ExtResource("4_0ceyg")]

[node name="Tread9" type="PathFollow3D" parent="M27/LeftTread"]
transform = Transform3D(-1, 3.39032e-06, -7.48149e-05, 0, 0.998975, 0.0452696, 7.48917e-05, 0.0452696, -0.998975, 0, 0.00248486, -0.00129479)
rotation_mode = 4

[node name="m27_tread" parent="M27/LeftTread/Tread9" instance=ExtResource("4_0ceyg")]

[node name="Tread10" type="PathFollow3D" parent="M27/LeftTread"]
transform = Transform3D(-1, 3.39032e-06, -7.48149e-05, 0, 0.998975, 0.0452696, 7.48917e-05, 0.0452696, -0.998975, 0, 0.00248486, -0.00129479)
rotation_mode = 4

[node name="m27_tread" parent="M27/LeftTread/Tread10" instance=ExtResource("4_0ceyg")]

[node name="Tread11" type="PathFollow3D" parent="M27/LeftTread"]
transform = Transform3D(-1, 3.39032e-06, -7.48149e-05, 0, 0.998975, 0.0452696, 7.48917e-05, 0.0452696, -0.998975, 0, 0.00248486, -0.00129479)
rotation_mode = 4

[node name="m27_tread" parent="M27/LeftTread/Tread11" instance=ExtResource("4_0ceyg")]

[node name="Tread12" type="PathFollow3D" parent="M27/LeftTread"]
transform = Transform3D(-1, 3.39032e-06, -7.48149e-05, 0, 0.998975, 0.0452696, 7.48917e-05, 0.0452696, -0.998975, 0, 0.00248486, -0.00129479)
rotation_mode = 4

[node name="m27_tread" parent="M27/LeftTread/Tread12" instance=ExtResource("4_0ceyg")]

[node name="Tread13" type="PathFollow3D" parent="M27/LeftTread"]
transform = Transform3D(-1, 3.39032e-06, -7.48149e-05, 0, 0.998975, 0.0452696, 7.48917e-05, 0.0452696, -0.998975, 0, 0.00248486, -0.00129479)
rotation_mode = 4

[node name="m27_tread" parent="M27/LeftTread/Tread13" instance=ExtResource("4_0ceyg")]

[node name="Tread14" type="PathFollow3D" parent="M27/LeftTread"]
transform = Transform3D(-1, 3.39032e-06, -7.48149e-05, 0, 0.998975, 0.0452696, 7.48917e-05, 0.0452696, -0.998975, 0, 0.00248486, -0.00129479)
rotation_mode = 4

[node name="m27_tread" parent="M27/LeftTread/Tread14" instance=ExtResource("4_0ceyg")]

[node name="Tread15" type="PathFollow3D" parent="M27/LeftTread"]
transform = Transform3D(-1, 3.39032e-06, -7.48149e-05, 0, 0.998975, 0.0452696, 7.48917e-05, 0.0452696, -0.998975, 0, 0.00248486, -0.00129479)
rotation_mode = 4

[node name="m27_tread" parent="M27/LeftTread/Tread15" instance=ExtResource("4_0ceyg")]

[node name="Tread16" type="PathFollow3D" parent="M27/LeftTread"]
transform = Transform3D(-1, 3.39032e-06, -7.48149e-05, 0, 0.998975, 0.0452696, 7.48917e-05, 0.0452696, -0.998975, 0, 0.00248486, -0.00129479)
rotation_mode = 4

[node name="m27_tread" parent="M27/LeftTread/Tread16" instance=ExtResource("4_0ceyg")]

[node name="Tread17" type="PathFollow3D" parent="M27/LeftTread"]
transform = Transform3D(-1, 3.39032e-06, -7.48149e-05, 0, 0.998975, 0.0452696, 7.48917e-05, 0.0452696, -0.998975, 0, 0.00248486, -0.00129479)
rotation_mode = 4

[node name="m27_tread" parent="M27/LeftTread/Tread17" instance=ExtResource("4_0ceyg")]

[node name="Tread18" type="PathFollow3D" parent="M27/LeftTread"]
transform = Transform3D(-1, 3.39032e-06, -7.48149e-05, 0, 0.998975, 0.0452696, 7.48917e-05, 0.0452696, -0.998975, 0, 0.00248486, -0.00129479)
rotation_mode = 4

[node name="m27_tread" parent="M27/LeftTread/Tread18" instance=ExtResource("4_0ceyg")]

[node name="Tread19" type="PathFollow3D" parent="M27/LeftTread"]
transform = Transform3D(-1, 3.39032e-06, -7.48149e-05, 0, 0.998975, 0.0452696, 7.48917e-05, 0.0452696, -0.998975, 0, 0.00248486, -0.00129479)
rotation_mode = 4

[node name="m27_tread" parent="M27/LeftTread/Tread19" instance=ExtResource("4_0ceyg")]

[node name="Tread20" type="PathFollow3D" parent="M27/LeftTread"]
transform = Transform3D(-1, 3.39032e-06, -7.48149e-05, 0, 0.998975, 0.0452696, 7.48917e-05, 0.0452696, -0.998975, 0, 0.00248486, -0.00129479)
rotation_mode = 4

[node name="m27_tread" parent="M27/LeftTread/Tread20" instance=ExtResource("4_0ceyg")]

[node name="Tread21" type="PathFollow3D" parent="M27/LeftTread"]
transform = Transform3D(-1, 3.39032e-06, -7.48149e-05, 0, 0.998975, 0.0452696, 7.48917e-05, 0.0452696, -0.998975, 0, 0.00248486, -0.00129479)
rotation_mode = 4

[node name="m27_tread" parent="M27/LeftTread/Tread21" instance=ExtResource("4_0ceyg")]

[node name="Tread22" type="PathFollow3D" parent="M27/LeftTread"]
transform = Transform3D(-1, 3.39032e-06, -7.48149e-05, 0, 0.998975, 0.0452696, 7.48917e-05, 0.0452696, -0.998975, 0, 0.00248486, -0.00129479)
rotation_mode = 4

[node name="m27_tread" parent="M27/LeftTread/Tread22" instance=ExtResource("4_0ceyg")]

[node name="Tread23" type="PathFollow3D" parent="M27/LeftTread"]
transform = Transform3D(-1, 3.39032e-06, -7.48149e-05, 0, 0.998975, 0.0452696, 7.48917e-05, 0.0452696, -0.998975, 0, 0.00248486, -0.00129479)
rotation_mode = 4

[node name="m27_tread" parent="M27/LeftTread/Tread23" instance=ExtResource("4_0ceyg")]

[node name="Tread24" type="PathFollow3D" parent="M27/LeftTread"]
transform = Transform3D(-1, 3.39032e-06, -7.48149e-05, 0, 0.998975, 0.0452696, 7.48917e-05, 0.0452696, -0.998975, 0, 0.00248486, -0.00129479)
rotation_mode = 4

[node name="m27_tread" parent="M27/LeftTread/Tread24" instance=ExtResource("4_0ceyg")]

[node name="Tread25" type="PathFollow3D" parent="M27/LeftTread"]
transform = Transform3D(-1, 3.39032e-06, -7.48149e-05, 0, 0.998975, 0.0452696, 7.48917e-05, 0.0452696, -0.998975, 0, 0.00248486, -0.00129479)
rotation_mode = 4

[node name="m27_tread" parent="M27/LeftTread/Tread25" instance=ExtResource("4_0ceyg")]

[node name="Tread26" type="PathFollow3D" parent="M27/LeftTread"]
transform = Transform3D(-1, 3.39032e-06, -7.48149e-05, 0, 0.998975, 0.0452696, 7.48917e-05, 0.0452696, -0.998975, 0, 0.00248486, -0.00129479)
rotation_mode = 4

[node name="m27_tread" parent="M27/LeftTread/Tread26" instance=ExtResource("4_0ceyg")]

[node name="Tread27" type="PathFollow3D" parent="M27/LeftTread"]
transform = Transform3D(-1, 3.39032e-06, -7.48149e-05, 0, 0.998975, 0.0452696, 7.48917e-05, 0.0452696, -0.998975, 0, 0.00248486, -0.00129479)
rotation_mode = 4

[node name="m27_tread" parent="M27/LeftTread/Tread27" instance=ExtResource("4_0ceyg")]

[node name="Tread28" type="PathFollow3D" parent="M27/LeftTread"]
transform = Transform3D(-1, 3.39032e-06, -7.48149e-05, 0, 0.998975, 0.0452696, 7.48917e-05, 0.0452696, -0.998975, 0, 0.00248486, -0.00129479)
rotation_mode = 4

[node name="m27_tread" parent="M27/LeftTread/Tread28" instance=ExtResource("4_0ceyg")]

[node name="Tread29" type="PathFollow3D" parent="M27/LeftTread"]
transform = Transform3D(-1, 3.39032e-06, -7.48149e-05, 0, 0.998975, 0.0452696, 7.48917e-05, 0.0452696, -0.998975, 0, 0.00248486, -0.00129479)
rotation_mode = 4

[node name="m27_tread" parent="M27/LeftTread/Tread29" instance=ExtResource("4_0ceyg")]

[node name="Tread30" type="PathFollow3D" parent="M27/LeftTread"]
transform = Transform3D(-1, 3.39032e-06, -7.48149e-05, 0, 0.998975, 0.0452696, 7.48917e-05, 0.0452696, -0.998975, 0, 0.00248486, -0.00129479)
rotation_mode = 4

[node name="m27_tread" parent="M27/LeftTread/Tread30" instance=ExtResource("4_0ceyg")]

[node name="RightTread" type="Path3D" parent="M27"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0.289, -0.23, -0.021)
curve = SubResource("Curve3D_1qq5d")
script = ExtResource("5_ie8j0")

[node name="Tread" type="PathFollow3D" parent="M27/RightTread"]
transform = Transform3D(-1, 3.39032e-06, -7.48149e-05, 0, 0.998975, 0.0452696, 7.48917e-05, 0.0452696, -0.998975, 0, 0.00248486, -0.00129479)
rotation_mode = 4

[node name="m27_tread" parent="M27/RightTread/Tread" instance=ExtResource("4_0ceyg")]

[node name="Tread2" type="PathFollow3D" parent="M27/RightTread"]
transform = Transform3D(-1, 3.39032e-06, -7.48149e-05, 0, 0.998975, 0.0452696, 7.48917e-05, 0.0452696, -0.998975, 0, 0.00248486, -0.00129479)
rotation_mode = 4

[node name="m27_tread" parent="M27/RightTread/Tread2" instance=ExtResource("4_0ceyg")]

[node name="Tread3" type="PathFollow3D" parent="M27/RightTread"]
transform = Transform3D(-1, 3.39032e-06, -7.48149e-05, 0, 0.998975, 0.0452696, 7.48917e-05, 0.0452696, -0.998975, 0, 0.00248486, -0.00129479)
rotation_mode = 4

[node name="m27_tread" parent="M27/RightTread/Tread3" instance=ExtResource("4_0ceyg")]

[node name="Tread4" type="PathFollow3D" parent="M27/RightTread"]
transform = Transform3D(-1, 3.39032e-06, -7.48149e-05, 0, 0.998975, 0.0452696, 7.48917e-05, 0.0452696, -0.998975, 0, 0.00248486, -0.00129479)
rotation_mode = 4

[node name="m27_tread" parent="M27/RightTread/Tread4" instance=ExtResource("4_0ceyg")]

[node name="Tread5" type="PathFollow3D" parent="M27/RightTread"]
transform = Transform3D(-1, 3.39032e-06, -7.48149e-05, 0, 0.998975, 0.0452696, 7.48917e-05, 0.0452696, -0.998975, 0, 0.00248486, -0.00129479)
rotation_mode = 4

[node name="m27_tread" parent="M27/RightTread/Tread5" instance=ExtResource("4_0ceyg")]

[node name="Tread6" type="PathFollow3D" parent="M27/RightTread"]
transform = Transform3D(-1, 3.39032e-06, -7.48149e-05, 0, 0.998975, 0.0452696, 7.48917e-05, 0.0452696, -0.998975, 0, 0.00248486, -0.00129479)
rotation_mode = 4

[node name="m27_tread" parent="M27/RightTread/Tread6" instance=ExtResource("4_0ceyg")]

[node name="Tread7" type="PathFollow3D" parent="M27/RightTread"]
transform = Transform3D(-1, 3.39032e-06, -7.48149e-05, 0, 0.998975, 0.0452696, 7.48917e-05, 0.0452696, -0.998975, 0, 0.00248486, -0.00129479)
rotation_mode = 4

[node name="m27_tread" parent="M27/RightTread/Tread7" instance=ExtResource("4_0ceyg")]

[node name="Tread8" type="PathFollow3D" parent="M27/RightTread"]
transform = Transform3D(-1, 3.39032e-06, -7.48149e-05, 0, 0.998975, 0.0452696, 7.48917e-05, 0.0452696, -0.998975, 0, 0.00248486, -0.00129479)
rotation_mode = 4

[node name="m27_tread" parent="M27/RightTread/Tread8" instance=ExtResource("4_0ceyg")]

[node name="Tread9" type="PathFollow3D" parent="M27/RightTread"]
transform = Transform3D(-1, 3.39032e-06, -7.48149e-05, 0, 0.998975, 0.0452696, 7.48917e-05, 0.0452696, -0.998975, 0, 0.00248486, -0.00129479)
rotation_mode = 4

[node name="m27_tread" parent="M27/RightTread/Tread9" instance=ExtResource("4_0ceyg")]

[node name="Tread10" type="PathFollow3D" parent="M27/RightTread"]
transform = Transform3D(-1, 3.39032e-06, -7.48149e-05, 0, 0.998975, 0.0452696, 7.48917e-05, 0.0452696, -0.998975, 0, 0.00248486, -0.00129479)
rotation_mode = 4

[node name="m27_tread" parent="M27/RightTread/Tread10" instance=ExtResource("4_0ceyg")]

[node name="Tread11" type="PathFollow3D" parent="M27/RightTread"]
transform = Transform3D(-1, 3.39032e-06, -7.48149e-05, 0, 0.998975, 0.0452696, 7.48917e-05, 0.0452696, -0.998975, 0, 0.00248486, -0.00129479)
rotation_mode = 4

[node name="m27_tread" parent="M27/RightTread/Tread11" instance=ExtResource("4_0ceyg")]

[node name="Tread12" type="PathFollow3D" parent="M27/RightTread"]
transform = Transform3D(-1, 3.39032e-06, -7.48149e-05, 0, 0.998975, 0.0452696, 7.48917e-05, 0.0452696, -0.998975, 0, 0.00248486, -0.00129479)
rotation_mode = 4

[node name="m27_tread" parent="M27/RightTread/Tread12" instance=ExtResource("4_0ceyg")]

[node name="Tread13" type="PathFollow3D" parent="M27/RightTread"]
transform = Transform3D(-1, 3.39032e-06, -7.48149e-05, 0, 0.998975, 0.0452696, 7.48917e-05, 0.0452696, -0.998975, 0, 0.00248486, -0.00129479)
rotation_mode = 4

[node name="m27_tread" parent="M27/RightTread/Tread13" instance=ExtResource("4_0ceyg")]

[node name="Tread14" type="PathFollow3D" parent="M27/RightTread"]
transform = Transform3D(-1, 3.39032e-06, -7.48149e-05, 0, 0.998975, 0.0452696, 7.48917e-05, 0.0452696, -0.998975, 0, 0.00248486, -0.00129479)
rotation_mode = 4

[node name="m27_tread" parent="M27/RightTread/Tread14" instance=ExtResource("4_0ceyg")]

[node name="Tread15" type="PathFollow3D" parent="M27/RightTread"]
transform = Transform3D(-1, 3.39032e-06, -7.48149e-05, 0, 0.998975, 0.0452696, 7.48917e-05, 0.0452696, -0.998975, 0, 0.00248486, -0.00129479)
rotation_mode = 4

[node name="m27_tread" parent="M27/RightTread/Tread15" instance=ExtResource("4_0ceyg")]

[node name="Tread16" type="PathFollow3D" parent="M27/RightTread"]
transform = Transform3D(-1, 3.39032e-06, -7.48149e-05, 0, 0.998975, 0.0452696, 7.48917e-05, 0.0452696, -0.998975, 0, 0.00248486, -0.00129479)
rotation_mode = 4

[node name="m27_tread" parent="M27/RightTread/Tread16" instance=ExtResource("4_0ceyg")]

[node name="Tread17" type="PathFollow3D" parent="M27/RightTread"]
transform = Transform3D(-1, 3.39032e-06, -7.48149e-05, 0, 0.998975, 0.0452696, 7.48917e-05, 0.0452696, -0.998975, 0, 0.00248486, -0.00129479)
rotation_mode = 4

[node name="m27_tread" parent="M27/RightTread/Tread17" instance=ExtResource("4_0ceyg")]

[node name="Tread18" type="PathFollow3D" parent="M27/RightTread"]
transform = Transform3D(-1, 3.39032e-06, -7.48149e-05, 0, 0.998975, 0.0452696, 7.48917e-05, 0.0452696, -0.998975, 0, 0.00248486, -0.00129479)
rotation_mode = 4

[node name="m27_tread" parent="M27/RightTread/Tread18" instance=ExtResource("4_0ceyg")]

[node name="Tread19" type="PathFollow3D" parent="M27/RightTread"]
transform = Transform3D(-1, 3.39032e-06, -7.48149e-05, 0, 0.998975, 0.0452696, 7.48917e-05, 0.0452696, -0.998975, 0, 0.00248486, -0.00129479)
rotation_mode = 4

[node name="m27_tread" parent="M27/RightTread/Tread19" instance=ExtResource("4_0ceyg")]

[node name="Tread20" type="PathFollow3D" parent="M27/RightTread"]
transform = Transform3D(-1, 3.39032e-06, -7.48149e-05, 0, 0.998975, 0.0452696, 7.48917e-05, 0.0452696, -0.998975, 0, 0.00248486, -0.00129479)
rotation_mode = 4

[node name="m27_tread" parent="M27/RightTread/Tread20" instance=ExtResource("4_0ceyg")]

[node name="Tread21" type="PathFollow3D" parent="M27/RightTread"]
transform = Transform3D(-1, 3.39032e-06, -7.48149e-05, 0, 0.998975, 0.0452696, 7.48917e-05, 0.0452696, -0.998975, 0, 0.00248486, -0.00129479)
rotation_mode = 4

[node name="m27_tread" parent="M27/RightTread/Tread21" instance=ExtResource("4_0ceyg")]

[node name="Tread22" type="PathFollow3D" parent="M27/RightTread"]
transform = Transform3D(-1, 3.39032e-06, -7.48149e-05, 0, 0.998975, 0.0452696, 7.48917e-05, 0.0452696, -0.998975, 0, 0.00248486, -0.00129479)
rotation_mode = 4

[node name="m27_tread" parent="M27/RightTread/Tread22" instance=ExtResource("4_0ceyg")]

[node name="Tread23" type="PathFollow3D" parent="M27/RightTread"]
transform = Transform3D(-1, 3.39032e-06, -7.48149e-05, 0, 0.998975, 0.0452696, 7.48917e-05, 0.0452696, -0.998975, 0, 0.00248486, -0.00129479)
rotation_mode = 4

[node name="m27_tread" parent="M27/RightTread/Tread23" instance=ExtResource("4_0ceyg")]

[node name="Tread24" type="PathFollow3D" parent="M27/RightTread"]
transform = Transform3D(-1, 3.39032e-06, -7.48149e-05, 0, 0.998975, 0.0452696, 7.48917e-05, 0.0452696, -0.998975, 0, 0.00248486, -0.00129479)
rotation_mode = 4

[node name="m27_tread" parent="M27/RightTread/Tread24" instance=ExtResource("4_0ceyg")]

[node name="Tread25" type="PathFollow3D" parent="M27/RightTread"]
transform = Transform3D(-1, 3.39032e-06, -7.48149e-05, 0, 0.998975, 0.0452696, 7.48917e-05, 0.0452696, -0.998975, 0, 0.00248486, -0.00129479)
rotation_mode = 4

[node name="m27_tread" parent="M27/RightTread/Tread25" instance=ExtResource("4_0ceyg")]

[node name="Tread26" type="PathFollow3D" parent="M27/RightTread"]
transform = Transform3D(-1, 3.39032e-06, -7.48149e-05, 0, 0.998975, 0.0452696, 7.48917e-05, 0.0452696, -0.998975, 0, 0.00248486, -0.00129479)
rotation_mode = 4

[node name="m27_tread" parent="M27/RightTread/Tread26" instance=ExtResource("4_0ceyg")]

[node name="Tread27" type="PathFollow3D" parent="M27/RightTread"]
transform = Transform3D(-1, 3.39032e-06, -7.48149e-05, 0, 0.998975, 0.0452696, 7.48917e-05, 0.0452696, -0.998975, 0, 0.00248486, -0.00129479)
rotation_mode = 4

[node name="m27_tread" parent="M27/RightTread/Tread27" instance=ExtResource("4_0ceyg")]

[node name="Tread28" type="PathFollow3D" parent="M27/RightTread"]
transform = Transform3D(-1, 3.39032e-06, -7.48149e-05, 0, 0.998975, 0.0452696, 7.48917e-05, 0.0452696, -0.998975, 0, 0.00248486, -0.00129479)
rotation_mode = 4

[node name="m27_tread" parent="M27/RightTread/Tread28" instance=ExtResource("4_0ceyg")]

[node name="Tread29" type="PathFollow3D" parent="M27/RightTread"]
transform = Transform3D(-1, 3.39032e-06, -7.48149e-05, 0, 0.998975, 0.0452696, 7.48917e-05, 0.0452696, -0.998975, 0, 0.00248486, -0.00129479)
rotation_mode = 4

[node name="m27_tread" parent="M27/RightTread/Tread29" instance=ExtResource("4_0ceyg")]

[node name="Tread30" type="PathFollow3D" parent="M27/RightTread"]
transform = Transform3D(-1, 3.39032e-06, -7.48149e-05, 0, 0.998975, 0.0452696, 7.48917e-05, 0.0452696, -0.998975, 0, 0.00248486, -0.00129479)
rotation_mode = 4

[node name="m27_tread" parent="M27/RightTread/Tread30" instance=ExtResource("4_0ceyg")]

[node name="CollisionShape3D" type="CollisionShape3D" parent="M27"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.000488281, 0.0859485, -0.0197836)
shape = SubResource("BoxShape3D_tygfx")

[node name="arm" parent="M27" instance=ExtResource("6_m2vd7")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.286277, 0)
script = ExtResource("7_ws4yn")

[node name="CameraBase" type="Node3D" parent="M27"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.413158, 0)

[node name="Camera3D" type="Camera3D" parent="M27/CameraBase"]
transform = Transform3D(1, 0, 0, 0, 0.925051, 0.379844, 0, -0.379844, 0.925051, 0, 1.71717, 2.83672)
near = 0.1
script = ExtResource("8_sgg0n")
min_distance = 4.0
max_distance = 5.0

[node name="InteriorCameraPosition" type="Marker3D" parent="M27"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.554445, -0.0179634)

[node name="TopDownCameraPosition" type="Marker3D" parent="M27"]
transform = Transform3D(-1, 8.74228e-08, -3.82137e-15, 0, -4.37114e-08, -1, -8.74228e-08, -1, 4.37114e-08, 0, 7.47663, 0)

[node name="CanvasLayer_UI" type="CanvasLayer" parent="M27"]

[node name="infoLabel" type="Label" parent="M27/CanvasLayer_UI"]
offset_right = 40.0
offset_bottom = 23.0
metadata/_edit_use_anchors_ = true

[node name="FileDialog" type="FileDialog" parent="M27"]
